--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       height: 100%;
       overflow: hidden;
       font-family: Arial, sans-serif;
-      background: black;
+      background: #000;
       color: white;
     }
     canvas {
