--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       height: 100%;
       overflow: hidden;
       font-family: Arial, sans-serif;
-      background: #000;
+      background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
       color: white;
     }
     canvas {
@@ -70,7 +70,7 @@
 </head>
 
 <body>
-<canvas id="heartCanvas"></canvas>
+<canvas id="meteorCanvas"></canvas>
 
 <div id="click-to-play">Click or scroll to play music 🎵</div>
 
@@ -86,53 +86,62 @@
 <iframe id="youtube-music" src="https://www.youtube.com/embed/OqdA6DKV1Fs?enablejsapi=1&autoplay=1&mute=1&loop=1&playlist=OqdA6DKV1Fs" style="position: absolute; width: 1px; height: 1px; opacity: 0; pointer-events: none;" frameborder="0" allow="autoplay"></iframe>
 
 <script>
-// Heart particles
-const canvas = document.getElementById('heartCanvas');
+// Meteor shower effect
+const canvas = document.getElementById('meteorCanvas');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-let particles = [];
+let meteors = [];
 
-function createHeartParticles() {
-  particles = [];
-  const numParticles = 600;
-  for (let i = 0; i < numParticles; i++) {
-    const t = Math.random() * Math.PI * 2;
-    const r = 20 * (1 - Math.sin(t)) * (1 - Math.sin(t));
-    const x = r * Math.cos(t);
-    const y = r * Math.sin(t);
-
-    particles.push({
-      x: canvas.width/2 + x * 8,
-      y: canvas.height/2 - y * 8,
-      size: Math.random() * 2 + 1,
-      dx: (Math.random() - 0.5) * 0.5,
-      dy: (Math.random() - 0.5) * 0.5
-    });
-  }
+function createMeteor() {
+  return {
+    x: Math.random() * canvas.width,
+    y: Math.random() * -canvas.height,
+    length: Math.random() * 80 + 20,
+    speed: Math.random() * 4 + 2,
+    angle: Math.PI / 4,
+    alpha: Math.random() * 0.5 + 0.5
+  };
 }
 
-function drawParticles() {
+for (let i = 0; i < 50; i++) {
+  meteors.push(createMeteor());
+}
+
+function drawMeteors() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.fillStyle = 'pink';
-  for (let p of particles) {
+  ctx.fillStyle = "rgba(0,0,0,0.2)";
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+  
+  ctx.strokeStyle = "rgba(173,216,230,0.8)";
+  ctx.lineWidth = 2;
+  ctx.lineCap = "round";
+  
+  meteors.forEach(meteor => {
     ctx.beginPath();
-    ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
-    ctx.fill();
-    p.x += p.dx;
-    p.y += p.dy;
-  }
-  requestAnimationFrame(drawParticles);
+    ctx.moveTo(meteor.x, meteor.y);
+    ctx.lineTo(meteor.x - meteor.length * Math.cos(meteor.angle), meteor.y - meteor.length * Math.sin(meteor.angle));
+    ctx.stroke();
+    
+    meteor.x += meteor.speed * Math.cos(meteor.angle);
+    meteor.y += meteor.speed * Math.sin(meteor.angle);
+    
+    if (meteor.x > canvas.width || meteor.y > canvas.height) {
+      Object.assign(meteor, createMeteor());
+      meteor.x = Math.random() * canvas.width;
+      meteor.y = 0;
+    }
+  });
+  
+  requestAnimationFrame(drawMeteors);
 }
 
-createHeartParticles();
-drawParticles();
+drawMeteors();
 
 window.addEventListener('resize', () => {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
-  createHeartParticles();
 });
 
 // YouTube Music Control
